#135 Move or rename the com.avereon.xenon.node package